Integrate stripe API with application
